[package]
name = "irm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["cargo", "debug", "derive"] }
clap_derive = "4.5.8"
crossterm = { version = "0.27.0", features = ["serde"] }
indicatif = "0.17.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.1"
